--- a/multseries.html
+++ b/multseries.html
@@ -64,6 +64,10 @@
         <div><span>Рік</span><span id="seriesYear"></span></div>
         <div><span>IMDb</span><span id="seriesImdb"></span></div>
       </div>
+    <button id="bookmarkSeriesBtn" class="ep-btn" style="margin-top:10px;width:100%;">
+  ⭐ Додати в закладки
+</button>
+
     </div>
 
     <div class="series-right">
@@ -211,6 +215,60 @@
   }
 
   document.addEventListener("DOMContentLoaded", loadSeries);
+// ==== ⭐ Закладки (multseries) ====
+function getBookmarks() {
+  try { return JSON.parse(localStorage.getItem("bookmarks") || "[]"); }
+  catch { return []; }
+}
+function setBookmarks(arr) {
+  localStorage.setItem("bookmarks", JSON.stringify(arr));
+}
+function isCartoonSeriesBookmarked(title) {
+  const list = getBookmarks();
+  return list.some(x => x.type === "Мультсеріал" && x.title === title);
+}
+function refreshCartoonBtn(title) {
+  const btn = document.getElementById("bookmarkSeriesBtn");
+  if (!btn) return;
+  btn.textContent = isCartoonSeriesBookmarked(title) ? "⭐ У закладках" : "⭐ Додати в закладки";
+}
+
+document.getElementById("bookmarkSeriesBtn")?.addEventListener("click", () => {
+  const title = document.getElementById("seriesTitle")?.textContent?.trim() || "";
+  if (!title) return;
+
+  const item = {
+    type: "Мультсеріал",
+    id: title,
+    title,
+    poster: document.getElementById("seriesPoster")?.src || "",
+    year: document.getElementById("seriesYear")?.textContent?.trim() || "",
+    genre: document.getElementById("seriesGenre")?.textContent?.trim() || "",
+    imdb: document.getElementById("seriesImdb")?.textContent?.trim() || "—",
+    link: `multseries.html?title=${encodeURIComponent(title)}`
+  };
+
+  let list = getBookmarks();
+  const exists = isCartoonSeriesBookmarked(title);
+
+  if (exists) {
+    list = list.filter(x => !(x.type === "Мультсеріал" && x.title === title));
+    setBookmarks(list);
+    refreshCartoonBtn(title);
+    alert("❌ Видалено із закладок");
+  } else {
+    list.push(item);
+    setBookmarks(list);
+    refreshCartoonBtn(title);
+    alert("✅ Додано у закладки");
+  }
+});
+
+document.addEventListener("DOMContentLoaded", () => {
+  const title = document.getElementById("seriesTitle")?.textContent?.trim() || "";
+  if (title) refreshCartoonBtn(title);
+});
+
 </script>
 </body>
 </html>
