--- a/film.html
+++ b/film.html
@@ -376,7 +376,44 @@
   color: #ccc;
   line-height: 1.3;
 }
-    
+/* === Рядок кнопок під відео === */
+.action-row {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin: 8px 0 12px 0;
+}
+
+/* Кнопка скарги (існуюча) */
+.report-btn {
+  background: transparent;
+  border: none;
+  color: #ff6b2b;
+  font-size: 13.5px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: color 0.2s ease;
+}
+.report-btn:hover { color: #ffa066; }
+
+/* ⭐ Кнопка закладок */
+.bookmark-btn {
+  background: transparent;
+  border: 1px solid rgba(0,255,255,0.4);
+  color: #00fff2;
+  font-size: 15px;
+  font-weight: 700;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 6px 12px;
+  transition: all 0.25s ease;
+  text-shadow: 0 0 8px rgba(0,255,255,0.6);
+}
+.bookmark-btn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 14px rgba(0,255,255,0.45);
+}
+
   </style>
 </head>
 
@@ -451,11 +488,10 @@
           <button id="btnMovie" class="active">🎬 Фільм</button>
           <button id="btnTrailer">🎞️ Трейлер</button>
         </div>
-        <!-- 🟠 Кнопка для скарги -->
-        <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
-        <!-- ⭐ Кнопка додати в закладки -->
-        <button id="bookmarkBtn" class="report-btn" style="color:#00fff2;margin-left:10px;">⭐ Додати в закладки</button>
-
+       <div class="action-row">
+  <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
+  <button id="bookmarkBtn" class="bookmark-btn">⭐ Додати в закладки</button>
+</div>
 
         <div class="player-box">
   <div class="player-wrapper" style="position:relative;">
