--- a/film.html
+++ b/film.html
@@ -376,44 +376,7 @@
   color: #ccc;
   line-height: 1.3;
 }
-/* === Рядок кнопок під відео === */
-.action-row {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin: 8px 0 12px 0;
-}
-
-/* Кнопка скарги (існуюча) */
-.report-btn {
-  background: transparent;
-  border: none;
-  color: #ff6b2b;
-  font-size: 13.5px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: color 0.2s ease;
-}
-.report-btn:hover { color: #ffa066; }
-
-/* ⭐ Кнопка закладок */
-.bookmark-btn {
-  background: transparent;
-  border: 1px solid rgba(0,255,255,0.4);
-  color: #00fff2;
-  font-size: 15px;
-  font-weight: 700;
-  cursor: pointer;
-  border-radius: 8px;
-  padding: 6px 12px;
-  transition: all 0.25s ease;
-  text-shadow: 0 0 8px rgba(0,255,255,0.6);
-}
-.bookmark-btn:hover {
-  transform: scale(1.08);
-  box-shadow: 0 0 14px rgba(0,255,255,0.45);
-}
-
+    
   </style>
 </head>
 
@@ -488,10 +451,8 @@
           <button id="btnMovie" class="active">🎬 Фільм</button>
           <button id="btnTrailer">🎞️ Трейлер</button>
         </div>
-       <div class="action-row">
-  <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
-  <button id="bookmarkBtn" class="bookmark-btn">⭐ Додати в закладки</button>
-</div>
+        <!-- 🟠 Кнопка для скарги -->
+        <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
 
         <div class="player-box">
   <div class="player-wrapper" style="position:relative;">
@@ -798,45 +759,6 @@ function getYouTubeId(url) {
 
     // Завантаження сторінки
     loadFilm();
-// === ⭐ ЗАКЛАДКИ ===
-function toggleBookmark(film) {
-  const key = "bookmarks";
-  let list = JSON.parse(localStorage.getItem(key) || "[]");
-
-  const exists = list.some(item => item.id === film.id);
-  if (exists) {
-    list = list.filter(item => item.id !== film.id);
-    localStorage.setItem(key, JSON.stringify(list));
-    alert("❌ Видалено із закладок");
-    document.getElementById("bookmarkBtn").textContent = "⭐ Додати в закладки";
-  } else {
-    list.push(film);
-    localStorage.setItem(key, JSON.stringify(list));
-    alert("✅ Додано у закладки");
-    document.getElementById("bookmarkBtn").textContent = "⭐ У закладках";
-  }
-}
-
-document.getElementById("bookmarkBtn")?.addEventListener("click", () => {
-  const film = {
-    id: movieUrl || Date.now(),
-    title: document.getElementById("filmTitle").textContent.trim(),
-    poster: document.getElementById("filmPoster").src,
-    year: document.getElementById("filmYear").textContent.trim(),
-    genre: document.getElementById("filmGenre").textContent.trim(),
-    imdb: document.getElementById("filmImdb").textContent.trim()
-  };
-  toggleBookmark(film);
-});
-
-// При відкритті сторінки — оновлюємо текст кнопки
-window.addEventListener("DOMContentLoaded", () => {
-  const title = document.getElementById("filmTitle")?.textContent?.trim();
-  const list = JSON.parse(localStorage.getItem("bookmarks") || "[]");
-  const exists = list.some(item => item.title === title);
-  if (exists) document.getElementById("bookmarkBtn").textContent = "⭐ У закладках";
-});
-
     // ===== 🎬 Рекомендовані фільми =====
 // 🎬 Рекомендовані фільми — шукає схожі за назвою або жанром
 async function loadRecommendedFilms(title, genre) {
