--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@ async function loadLatestFilms() {
     `;
     card.addEventListener("click", () => {
       // 🎬 якщо серіал — відкриваємо сторінку серіалу, якщо фільм — сторінку фільму
-      if (item.type === "Серіал" || item.type === "Мультсеріал") {
+      if (item.type === "Серіал") {
         window.location.href = "series.html?title=" + encodeURIComponent(item.title);
+      } else if (item.type === "Мультсеріал") {
+        window.location.href = "multseries.html?title=" + encodeURIComponent(item.title);
       } else {
         window.location.href = "film.html?id=" + item.id;
       }
@@ -401,6 +403,7 @@ document.addEventListener("DOMContentLoaded", loadDynamicSidebar);
 
 </body>
 </html>
+
 
 
 
