--- a/film.html
+++ b/film.html
@@ -376,7 +376,25 @@
   color: #ccc;
   line-height: 1.3;
 }
-    
+  /* === ⭐ КНОПКА ЗАКЛАДОК === */
+.bookmark-btn {
+  background: transparent;
+  border: 1px solid rgba(0,255,255,0.4);
+  color: #00fff2;
+  font-size: 15px;
+  font-weight: 700;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 6px 14px;
+  margin-left: 10px;
+  transition: all 0.25s ease;
+  text-shadow: 0 0 8px rgba(0,255,255,0.6);
+}
+.bookmark-btn:hover {
+  transform: scale(1.08);
+  box-shadow: 0 0 14px rgba(0,255,255,0.45);
+}
+  
   </style>
 </head>
 
@@ -452,7 +470,7 @@
           <button id="btnTrailer">🎞️ Трейлер</button>
         </div>
         <!-- 🟠 Кнопка для скарги -->
-        <button id="reportBtn" class="report-btn">⚠️ Повідомити про проблему</button>
+        <button id="bookmarkBtn" class="bookmark-btn">⭐ Додати в закладки</button>
 
         <div class="player-box">
   <div class="player-wrapper" style="position:relative;">
@@ -759,6 +777,56 @@ function getYouTubeId(url) {
 
     // Завантаження сторінки
     loadFilm();
+    // === ⭐ ЗАКЛАДКИ ===
+function getBookmarks() {
+  try { return JSON.parse(localStorage.getItem("bookmarks") || "[]"); }
+  catch { return []; }
+}
+function setBookmarks(arr) {
+  localStorage.setItem("bookmarks", JSON.stringify(arr));
+}
+function isBookmarked(id) {
+  const list = getBookmarks();
+  return list.some(x => String(x.id) === String(id) && x.type === "Фільм");
+}
+function updateBookmarkBtn(id) {
+  const btn = document.getElementById("bookmarkBtn");
+  if (!btn) return;
+  btn.textContent = isBookmarked(id) ? "⭐ У закладках" : "⭐ Додати в закладки";
+}
+
+document.getElementById("bookmarkBtn")?.addEventListener("click", () => {
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get("id");
+  const title = document.getElementById("filmTitle")?.textContent.trim();
+  const poster = document.getElementById("filmPoster")?.src;
+  const year = document.getElementById("filmYear")?.textContent.trim();
+  const genre = document.getElementById("filmGenre")?.textContent.trim();
+  const imdb = document.getElementById("filmImdb")?.textContent.trim();
+
+  let list = getBookmarks();
+  const exists = isBookmarked(id);
+
+  if (exists) {
+    list = list.filter(x => !(String(x.id) === String(id) && x.type === "Фільм"));
+    setBookmarks(list);
+    updateBookmarkBtn(id);
+    alert("❌ Видалено із закладок");
+  } else {
+    list.push({ id, title, poster, year, genre, imdb, type: "Фільм" });
+    setBookmarks(list);
+    updateBookmarkBtn(id);
+    alert("✅ Додано у закладки");
+  }
+});
+
+// При відкритті сторінки — оновлюємо текст кнопки
+window.addEventListener("DOMContentLoaded", () => {
+  const params = new URLSearchParams(window.location.search);
+  const id = params.get("id");
+  if (id) updateBookmarkBtn(id);
+});
+
     // ===== 🎬 Рекомендовані фільми =====
 // 🎬 Рекомендовані фільми — шукає схожі за назвою або жанром
 async function loadRecommendedFilms(title, genre) {
