--- a/film.html
+++ b/film.html
@@ -377,6 +377,7 @@
   line-height: 1.3;
 }
   /* === ⭐ КНОПКА ЗАКЛАДОК === */
+/* === ⭐ КНОПКА ЗАКЛАДОК === */
 .bookmark-btn {
   background: transparent;
   border: 1px solid rgba(0,255,255,0.4);
@@ -394,6 +395,19 @@
   transform: scale(1.08);
   box-shadow: 0 0 14px rgba(0,255,255,0.45);
 }
+
+/* 🔸 Коли фільм уже в закладках */
+.bookmark-btn.active {
+  border-color: gold;
+  color: gold;
+  text-shadow: 0 0 10px gold, 0 0 20px rgba(255,215,0,0.6);
+  box-shadow: 0 0 15px rgba(255,215,0,0.3);
+}
+.bookmark-btn.active:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 25px rgba(255,215,0,0.5);
+}
+
  /* === 🎬 Рядок із кнопками Фільм / Трейлер + Закладка === */
 .source-row {
   display: flex;
@@ -808,8 +822,11 @@ function isBookmarked(id) {
 function updateBookmarkBtn(id) {
   const btn = document.getElementById("bookmarkBtn");
   if (!btn) return;
-  btn.textContent = isBookmarked(id) ? "⭐ У закладках" : "⭐ Додати в закладки";
+  const active = isBookmarked(id);
+  btn.textContent = active ? "⭐ У закладках" : "⭐ Додати в закладки";
+  btn.classList.toggle("active", active);
 }
+
 
 document.getElementById("bookmarkBtn")?.addEventListener("click", () => {
   const params = new URLSearchParams(window.location.search);
