--- a/profile.html
+++ b/profile.html
@@ -232,6 +232,7 @@ document.getElementById("favClearBtn")?.addEventListener("click", () => {
 });
 
 window.addEventListener("DOMContentLoaded", renderBookmarksInProfile);
+renderBookmarksInProfile();
 </script>
 
 <!-- ✅ Підключення Supabase -->
