--- a/multseries.html
+++ b/multseries.html
@@ -335,12 +335,13 @@ document.getElementById("bookmarkSeriesBtn")?.addEventListener("click", () => {
     alert("❌ Видалено із закладок");
   } else {
     list.push({
+      id: first.id || "", // 🆕 додаємо ID для переходу
       title,
       poster,
       year,
       genre,
       imdb,
-      type: "Мультсеріал"
+      type: "Серіал"
     });
     setBookmarks(list);
     updateCartoonBookmarkBtn(title);
